Now does variable sized points and doesnt change their sizes on animate

--- a/index.html
+++ b/index.html
@@ -149,13 +149,15 @@
       <ul id="pointMenu" class="dropdown-menu drop-menu">
         <li id="pointSizeOpt">
           <span style="float:left">Size</span>
-          <div id="pointSizes" style="float:left; margin-left:10px";>
-            <div class="circle" style="margin-top: 6px; width:4px; height:4px;"></div>
-            <div class="circle" style="margin-top: 6px; width:5px; height:5px;"></div>
-            <div class="circle" style="margin-top: 6px; width:6px; height:6px;"></div>
-            <div class="circle" style="margin-top: 6px; width:7px; height:7px;"></div>
-            <div class="circle" style="margin-top: 6px; width:8px; height:8px;"></div>
-            <div class="circle" style="margin-top: 6px; width:9px; height:9px;"></div>
+          <div class="pointSize" id="pointSizes" style="float:left; margin-left:10px";>
+            <div id="autoPointSize" class="point-size">Auto</div>
+            <div class="point-size circle" style="margin-top: 6px; width:4px; height:4px;"></div>
+            <div class="point-size circle" style="margin-top: 6px; width:4px; height:4px;"></div>
+            <div class="point-size circle" style="margin-top: 6px; width:5px; height:5px;"></div>
+            <div class="point-size circle" style="margin-top: 6px; width:6px; height:6px;"></div>
+            <div class="point-size circle" style="margin-top: 6px; width:7px; height:7px;"></div>
+            <div class="point-size circle" style="margin-top: 6px; width:8px; height:8px;"></div>
+            <!--<div class="pointSize circle" style="margin-top: 6px; width:9px; height:9px;"></div>-->
           </div>
           <div style="clear: both;"></div>
         </li>
