Now have scatterplot working on front end

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <script src="js/node.js"></script>
     <script src="js/chart.js"></script>
     <script src="js/barchart.js"></script>
+    <script src="js/scatterplot.js"></script>
     <script src="js/mapd.js"></script>
     <script src="js/map.js"></script>
     <script type="text/javascript" src="lib/js/jquery-minicolors/jquery.minicolors.min.js"></script>
@@ -202,7 +203,8 @@
     <div id="dataDisplayDropdown" class="dropdown dropdown-anchor-left ">
         <ul id="dataDisplayMenu" class="dropdown-menu drop-menu data-dropdown display-menu">
             <li id="dataDisplayCloud"><span>Cloud</span><span class="checkmark">&#x2713</span></li>
-            <li id="dataDisplayBarchart"><span>Barchart</span><span class="checkmark">&#x2713</span></li>
+            <li id="dataDisplayBarchart"><span>Bar</span><span class="checkmark">&#x2713</span></li>
+            <li id="dataDisplayScatter"><span>Scatter</span><span class="checkmark">&#x2713</span></li>
         </ul>
     </div>
 
