--- a/index.html
+++ b/index.html
@@ -36,6 +36,17 @@
     <script src="js/mapd.js"></script>
     <script src="js/map.js"></script>
     <script type="text/javascript" src="lib/js/jquery-minicolors/jquery.minicolors.min.js"></script>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+            })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+          ga('create', 'UA-45485915-1', 'mit.edu');
+            ga('send', 'pageview');
+
+    </script>
+
 </head>
 
   <body>
