--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <script src="js/scatterplot.js"></script>
     <script src="js/mapd.js"></script>
     <script src="js/map.js"></script>
+    <script src="js/realtime.js"></script>
     <script type="text/javascript" src="lib/js/jquery-minicolors/jquery.minicolors.min.js"></script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
