Changed all settings and search buttons to 6px circle radius - changed Points to Pointmap

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <!--<button id="pointButton" class="settings-button" title="Points">Points</button>-->
       <button id="basemapButton" class="settings-button" title="Basemap">Basemap</button>
       <button id="basemapSelect" class="settings-drop-button" data-dropdown="#baseDropdown">▾</button>
-      <button id="pointButton" class="settings-button" title="Points">Points</button>
+      <button id="pointButton" class="settings-button" title="Points">Pointmap</button>
       <button id="pointSelect" class="settings-drop-button" data-dropdown="#pointDropdown">▾</button>
         <!--<div id="pointButtonImg"></div>-->
       <button id="heatButton" class="settings-button" title="Heatmap">Heatmap</button>
