Now does full screen and smaller time bar - couldnt get time bar to resize properly yet

--- a/index.html
+++ b/index.html
@@ -123,6 +123,8 @@
     <div id="main">
       <div id="mapview">
         <div id="map"></div>
+          <div id="sizeButton"></div>
+        </div>
       </div>
       <div id="control">
         <div id="sortOrder"></div>
