Added animation functions to map on full screen

--- a/index.html
+++ b/index.html
@@ -123,6 +123,10 @@
     <div id="main">
       <div id="mapview">
         <div id="map"></div>
+        <div id="mapAnimControls">
+          <button class="play-pause anim-input play-icon" type="button" title="Play/Pause"></button>
+          <button class="stop anim-input stop-icon" type="button" title="Stop"></button>
+        </div>
           <div id="sizeButton"></div>
         </div>
       </div>
