--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
     <script src="lib/js/javascript.util.js"></script>
     <script src="lib/js/twitter-text.js"></script>
     <script src="lib/js/d3.js"></script>
+    <script src="http://d3js.org/d3.v3.min.js"></script>
+    <script src="http://d3js.org/topojson.v1.min.js"></script>
+
+
     <script src="lib/js/jsts.js"></script>
     <script type="text/javascript" src="lib/js/jQCloud/jqcloud/jqcloud-1.0.4.min.js"></script>
     <script type="text/javascript" src="lib/js/jquery.cookie.js"></script>
@@ -36,6 +40,7 @@
     <script src="js/mapd.js"></script>
     <script src="js/map.js"></script>
     <!--<script src="js/realtime.js"></script>-->
+    <script src="js/choropleth.js"></script>
     <script type="text/javascript" src="lib/js/jquery-minicolors/jquery.minicolors.min.js"></script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
