Changing everything in choropleth to handle data joins with map generically

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <script src="lib/js/javascript.util.js"></script>
     <script src="lib/js/twitter-text.js"></script>
     <script src="lib/js/d3.js"></script>
-    <script src="http://d3js.org/d3.v3.min.js"></script>
+    <!--<script src="http://d3js.org/d3.v3.min.js"></script>-->
     <script src="http://d3js.org/topojson.v1.min.js"></script>
 
 
