--- a/index.html
+++ b/index.html
@@ -18,13 +18,12 @@
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
-    <!--<script src="http://code.jquery.com/jquery-1.9.1.js"></script>
-  <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>-->
     <script src="http://maps.google.com/maps/api/js?sensor=false"></script>
-    <script src="http://openlayers.org/api/OpenLayers.js"></script>
+    <!--<script src="http://openlayers.org/api/OpenLayers.js"></script>-->
+    <script src="lib/js/OpenLayers/lib/OpenLayers.js">
     <script src="lib/js/javascript.util.js"></script>
     <script src="lib/js/twitter-text.js"></script>
-    <script src="lib/js/d3.js"></script>
+    <script src="lib/js/d3.v3.min.js"></script>
     <!--<script src="http://d3js.org/d3.v3.min.js"></script>-->
     <script src="http://d3js.org/topojson.v1.min.js"></script>
 
@@ -233,7 +232,11 @@
     </div>
     <div id="polyDropdown" class="dropdown dropdown-anchor-right">
       <ul id="polyMenu" class="dropdown-menu drop-menu">
-        <li id="polyMinOpt">
+
+         <li id="polyCountry"><span>Country</span><span class="checkmark">&#x2713</span></li>
+         <li id="polyState"><span>State</span><span class="checkmark">&#x2713</span></li>
+         <li id="polyCounty"><span>County</span><span class="checkmark">&#x2713</span></li>
+          <li id="polyMinOpt">
           <span style="float:left">Min Tweets</span>
           <div style=" margin-left: 70px;" id="polyMinSlider"></div>
           <div style="clear: both;"></div>
