--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
             <li id="dataSourceCountry"><span>Country</span><span class="checkmark">&#x2713</span></li>
             <li id="dataSourceState"><span>State</span><span class="checkmark">&#x2713</span></li>
             <li id="dataSourceCounty"><span>County</span><span class="checkmark">&#x2713</span></li>
-            <li id="dataSourceZip"><span>Zip</span><span class="checkmark">&#x2713</span></li>
+            <!--<li id="dataSourceZip"><span>Zip</span><span class="checkmark">&#x2713</span></li>-->
         </ul>
     </div>
     
@@ -275,7 +275,7 @@
         <ul id="dataModeMenu" class="dropdown-menu drop-menu data-dropdown mode-menu">
             <li id="dataModeCounts"><span>Counts</span><span class="checkmark">&#x2713</span></li>
             <li id="dataModePercents"><span>Percents</span><span class="checkmark">&#x2713</span></li>
-            <li id="dataModeTrends"><span>Trends</span><span class="checkmark">&#x2713</span></li>
+            <!--<li id="dataModeTrends"><span>Trends</span><span class="checkmark">&#x2713</span></li>-->
         </ul>
     </div>
   </body>
