Now points animate well in realtime!

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <script src="js/scatterplot.js"></script>
     <script src="js/mapd.js"></script>
     <script src="js/map.js"></script>
-    <!--<script src="js/realtime.js"></script>-->
+    <script src="js/realtime.js"></script>
     <script src="js/choropleth.js"></script>
     <script type="text/javascript" src="lib/js/jquery-minicolors/jquery.minicolors.min.js"></script>
     <script>
