Now has zoomTo box

--- a/index.html
+++ b/index.html
@@ -135,7 +135,12 @@
           <button class="stop anim-input stop-icon" type="button" title="Stop"></button>
         </div>
         <div id="sizeButton"></div>
+        <form id="zoom">
+          <input id="zoomInput" class="search-input" type="text" name="location" placeholder=" Zoom To"/>
+          <!--<span class="iconClear">X</span>-->
+        </form>
         </div>
+        
       </div>
       <div id="control">
         <div id="sortOrder"></div>
