Now have dropdown button for advsearch

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
    }(document, 'script', 'facebook-jssdk'));</script>
 
     <div id="topbar">
-      <!--<div id="promo"><a href="http://www.map-d.com" target="_blank"><img src="img/mapd_logo.png" class="logo-image"></a></div>-->
+      <div id="promo"><a href="http://www.map-d.com" target="_blank"><img src="img/mapd_logo.png" class="logo-image"></a></div>
       <form id="search" class="search">
 	<div id="terms" class="search">
 	  <input id="termsInput" class="search-input" type="text" name="terms" placeholder=" What"/>
@@ -83,6 +83,7 @@
 	<button id="submit" class="search-input" type="submit">
 	  <div id="submit-icon" class="sprites search"></div>
 	</button>
+      <button id="advSearchButton" class="search-button search-input search" data-dropdown="#advSearchDropdown">▾</button>
 
       </form>
 
