Streaming works fine again

--- a/index.html
+++ b/index.html
@@ -77,15 +77,15 @@
     <div id="topbar">
       <div id="promo"><a href="http://www.map-d.com" target="_blank"><img src="img/mapd_logo.png" class="logo-image"></a></div>
       <form id="search" class="search">
-	<div id="terms">
+	<div id="terms" class="search">
 	  <input id="termsInput" class="search-input" type="text" name="terms" placeholder=" What"/>
       <span class="iconClear">X</span>
 	</div>
-	<div id="user">
+	<div id="user" class="search">
 	  <input id="userInput" class="search-input" type="text" name="user" placeholder=" Who"/>
       <span class="iconClear">X</span>
 	</div>
-	<div id="location">
+	<div id="location" class="search">
 	  <input id="zoomInput" class="search-input" type="text" name="zoom" placeholder=" Where"/>
       <span class="iconClear">X</span>
 	</div>
