First commit t taxi map - can do full screen map fine

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <script src="js/scatterplot.js"></script>
     <script src="js/mapd.js"></script>
     <script src="js/map.js"></script>
-    <script src="js/realtime.js"></script>
+    <!--<script src="js/realtime.js"></script>-->
     <script src="js/choropleth.js"></script>
     <script type="text/javascript" src="lib/js/jquery-minicolors/jquery.minicolors.min.js"></script>
     <script>
@@ -151,23 +151,10 @@
         </div>
         
       </div>
-      <div id="control">
       <!--
-      <div id="advSearch">
-        <div id="advSearchBar">Advanced Search ▾</div>
-      </div>
-
-      <div id="advSearchInput">
-          <div id="location">
-            <button id="locationSelect" class="search-drop-button" data-dropdown="#locDropdown">Country ▾</button>
-            <input id="locationInput" type="text" name="location"/>
-            <span class="iconClear">X</span>
-          </div>
-        </div>
-      </div>
-      <div style="clear: both;"></div>
-      -->
+      <div id="control">
         <div id="sortOrder"></div>
+
         <div id="tweets"></div> 
             <div id="cloudBox">
                 <div id="toolbar">
@@ -177,28 +164,11 @@
                   <button id="lock">unlocked</button>
                 </div>
 
-
-                        <!--<span id="displayMode">
-
-                            <input type="radio" id="cloudDisplay" value="cloud" name="displayMode" /><label for="cloudDisplay">Cloud</label>
-                            <input type="radio" id="barDisplay" value="chart" name="displayMode"  /><label for="barDisplay">Graph</label>
-                        </span>
-                        <span id="dataSource">
-                          <input type="radio" id="dataWords" value="words" name="dataSource" /><label for="dataWords">Words</label>
-                          <input type="radio" id="dataUsers" value="users" name="dataSource"  /><label for="dataUsers">Users</label>
-                          <input type="radio" id="dataGeo" value="geo" name="dataSource"  /><label for="dataGeo">Geo</label>
-                          <input type="radio" id="dataOrigin" value="origin" name="dataSource"  /><label for="dataOrigin">Origin</label>
-                        </span>
-                        <span id="dataNums">
-                          <input type="radio" id="dataCounts" value="counts" name="dataNums" /><label for="dataCounts">#</label>
-                          <input type="radio" id="dataPercents" value="percents" name="dataNums"  /><label for="dataPercents">%</label>
-                        </span>
-                        <button id="lock">unlocked</button>
-                      </div>-->
                 <div id="cloud"></div>
                 <div id="numTokensText"></div>
             </div>
       </div>
+      -->
       <div id="chart"></div>
     </div>
     <div id="link-dialog" title="Link to this map view"> </div>
